--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-pip
-python-dotenv
-Flask
-requests
-flask-cors
-Flask-Mail
+pip==22.1.2
+python-dotenv==0.20.0
+Flask==2.2.1
+requests==2.27.1
+flask-cors==3.0.10
+Flask-Mail==0.9.1
+PyMySQL==1.0.2
