--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,6 @@ PyMySQL==1.0.2
 cryptography==38.0.1
 boto3==1.24.93
 selenium==4.12.0
+webdriver-manager==4.0.0
 selenium-stealth==1.0.6
 BeautifulSoup4==4.12.2
